--- a/src/globals.scss
+++ b/src/globals.scss
@@ -73,7 +73,6 @@ body {
 }
 
 .app {
-  max-width: 144rem;
   margin: 0 auto;
   position: relative;
 }
